# server.js
@@ -1,12 +1,24 @@
 // Express web server example
 const express = require('express');
+const dotenv = require('dotenv').config();
 const bodyParser = require('body-parser')
-const mongodb = require('./data/database');
-const app = express();
+const mongodb = require('./db/connect');
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 
 const port = process.env.PORT || 3000; 
+const app = express();
 
-app.use(bodyParser.json());
+app.use(bodyParser.json())
+.use(session({
+    secret: "secret",
+    resave: false,
+    saveUninitialized: true,
+}))
+.use(passport.initialize())
+.use(passport.session())
 
 app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Origin', '*');
@@ -17,8 +29,37 @@ app.use((req, res, next) => {
     res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS');
     next();
 })
+.use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}))
+.use(cors({ origin: '*'}))
 //links to the routes folder
 app.use('/', require('./routes'));
+
+passport.use(new GitHubStrategy({
+    clientID: process.env.GITHUB_CLIENT_ID,
+    clientSecret: process.env.GITHUB_CLIENT_SECRET,
+    callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done){
+    //User.findOnCreate({ githubId: profile.id }, function(err, user){
+    return done(null, profile);
+    //});
+}))
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+})
+passport.deserializeUser((user, done) => {
+    done(null, user)
+})
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")});
+
+app.get('/github/callback', passport.authenticate('github', {
+    failureRedirect: '/api-docs', session: false}),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    });
 
 mongodb.initDb((err) => {
     if(err){
